# zeddeps

./: .gitignore  Cargo.toml  README.md  build.rs  extension.toml
.github/workflows/: release.yml
crates/zalezhnosti-lsp/: Cargo.toml
crates/zalezhnosti-lsp/src/: main.rs  manifest.rs  registry.rs  server.rs
crates/zeddeps-lsp/: Cargo.toml
crates/zeddeps-lsp/src/: lib.rs  main.rs  manifest.rs  registry.rs  server.rs
languages/cargo-manifest/: config.toml
languages/npm-package-manifest/: brackets.scm  config.toml  highlights.scm
languages/python-constraints/: config.toml
languages/python-project-manifest/: config.toml
languages/python-requirements/: config.toml
src/: lib.rs
