[package]
name = "zalezhnosti-lsp"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
percent-encoding = "2.3.2"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-std"] }
toml_edit = { version = "0.25.11", features = ["parse"] }
tower-lsp = "0.20"
