[package]
name = "zeddeps-lsp"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
toml_edit = { version = "0.22", features = ["parse"] }
tower-lsp = "0.20"
